@@ -1,6 +1,6 @@
 {
   "name": "simp-oath",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "author": "https://github.com/simp/pupmod-simp-oath/graphs/contributors",
   "summary": "Installation and config for pam_oath rpm",
   "license": "Apache-2.0",
@@ -50,6 +50,12 @@
     },
     {
       "operatingsystem": "Rocky",
+      "operatingsystemrelease": [
+        "8"
+      ]
+    },
+    {
+      "operatingsystem": "AlmaLinux",
       "operatingsystemrelease": [
         "8"
       ]
